fixed current directory of file widget location while failed permission of directory

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+ags (6.8.2)
+
+	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
+	* fixed ags_file_widget_refresh() default filename and location while failed permission of directory
+
 ags (6.8.1)
 
 	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
@@ -9,7 +14,7 @@ ags (6.8.0)
 	* implemented snap sandbox
 	* implemented flatpak sandbox
 	* improved AgsFileWidget make use of XDG_*_DIR environment variables
-	* improved ags_file_widget_refresh() while directory failed to open<
+	* improved ags_file_widget_refresh() while directory failed to open
 	* added --enable-snap-sandbox configure switch
 	* added --enable-flatpak-sandbox configure switch
 
