--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+ags (6.8.3)
+
+	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
+	* fixed ags_file_widget_real_refresh() test directory permissions
+	* fixed ags_file_widget_value_factory_bind() test file permissions
+	* fixed AgsFileWidget root directory bug
+
 ags (6.8.2)
 
 	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
