--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,14 @@
+ags (7.0.0)
+
+	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
+	* TODO:JK: rename AgsOpenSf2Sample to AgsOpenSF2Sample
+	* TODO:JK: rename AgsOpenSf2Instrument to AgsOpenSF2Instrument
+	* TODO:JK: improve ags_midi_smf_util.c return value
+	* TODO:JK: implemented pitch selection of ags-synth
+	* TODO:JK: implemented pitch selection of ags-fm-synth
+	* TODO:JK: implemented pitch selection of ags-sf2-synth
+	* TODO:JK: implemented pitch selection of ags-sfz-synth
+
 ags (6.8.3)
 
 	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
