--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+ags (6.8.6)
+
+	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
+	* fixed dead-lock in ags_pulse_devout_tic()
+
 ags (6.8.5)
 
 	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
