--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+ags (6.9.0)
+
+	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
+	* refactored ags-fx-notation
+
 ags (6.8.6)
 
 	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
