--- a/ChangeLog
+++ b/ChangeLog
@@ -1,13 +1,14 @@
 ags (7.0.0)
 
 	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
-	* TODO:JK: rename AgsOpenSf2Sample to AgsOpenSF2Sample
-	* TODO:JK: rename AgsOpenSf2Instrument to AgsOpenSF2Instrument
-	* TODO:JK: improve ags_midi_smf_util.c return value
+	* TODO:JK: implemented AgsMidiCCEditor
 	* TODO:JK: implemented pitch selection of ags-synth
 	* TODO:JK: implemented pitch selection of ags-fm-synth
 	* TODO:JK: implemented pitch selection of ags-sf2-synth
 	* TODO:JK: implemented pitch selection of ags-sfz-synth
+	* TODO:JK: rename AgsOpenSf2Sample to AgsOpenSF2Sample
+	* TODO:JK: rename AgsOpenSf2Instrument to AgsOpenSF2Instrument
+	* TODO:JK: improve ags_midi_smf_util.c return value
 
 ags (6.9.1)
 
