--- a/ChangeLog
+++ b/ChangeLog
@@ -7,8 +7,9 @@ ags (7.0.0)
 	* TODO:JK: implemented pitch selection of ags-fm-synth
 	* TODO:JK: implemented pitch selection of ags-sf2-synth
 	* TODO:JK: implemented pitch selection of ags-sfz-synth
-	* TODO:JK: rename AgsOpenSf2Sample to AgsOpenSF2Sample
-	* TODO:JK: rename AgsOpenSf2Instrument to AgsOpenSF2Instrument
+	* refactored AgsOpenSf2Sample to AgsOpenSF2Sample
+	* refactored AgsOpenSf2Instrument to AgsOpenSF2Instrument
+	* TODO:JK: removed ags_regex.[ch]
 	* TODO:JK: improve ags_midi_smf_util.c return value
 
 ags (6.9.1)
