--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+ags (6.9.2)
+
+	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
+	* fixed compiler errors on macos
+
 ags (6.9.1)
 
 	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
