--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+ags (6.9.3)
+
+	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
+	* added default ags.conf of CoreAudio on macos
+	* fixed sandbox path on macos
+	* fixed potential SIGSEGV with AgsFileWidget
+
 ags (6.9.2)
 
 	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
