--- a/ChangeLog
+++ b/ChangeLog
@@ -5,6 +5,8 @@ ags (6.10.0)
 	* implemented gesture swipe in automation editor
 	* implemented gesture swipe in wave form editor
 	* refactored AgsPreferences inherits GtkWindow, modern button layout and close by ESC key
+	* refactored AgsMachineEditorDialog inherits GtkWindow, modern button layout and close by ESC key
+	* refactored AgsMetaDataWindow close by ESC key
 	* disabled generic preferences
 
 ags (6.9.5)
