--- a/ChangeLog
+++ b/ChangeLog
@@ -7,6 +7,7 @@ ags (6.10.0)
 	* refactored AgsPreferences inherits GtkWindow, modern button layout and close by ESC key
 	* refactored AgsMachineEditorDialog inherits GtkWindow, modern button layout and close by ESC key
 	* refactored AgsMetaDataWindow close by ESC key
+	* refactored AgsOnlineHelpWindow close by ESC key
 	* disabled generic preferences
 
 ags (6.9.5)
