--- a/ChangeLog
+++ b/ChangeLog
@@ -7,6 +7,7 @@ ags (6.10.0)
 	* implemented message label of AgsInputDialog
 	* refactored AgsPreferences inherits GtkWindow, modern button layout and close by ESC key
 	* refactored AgsMachineEditorDialog inherits GtkWindow, modern button layout and close by ESC key
+	* refactored AgsConnectionEditorDialog inherits GtkWindow, modern button layout and close by ESC key
 	* refactored AgsMetaDataWindow close by ESC key
 	* refactored AgsOnlineHelpWindow close by ESC key
 	* refactored AgsMidiDialog close by ESC key
@@ -14,6 +15,7 @@ ags (6.10.0)
 	* refactored AgsPluginBrowser inherits GtkWindow, modern button layout and close by ESC key
 	* refactored AgsInputDialog close by ESC key
 	* disabled generic preferences
+	* TODO:JK: update user manual
 
 ags (6.9.5)
 
