--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+ags (6.10.3)
+
+	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
+	* fixed macos sandbox paths
+	* improved macos window menu
+	* modified macos default config
+
 ags (6.10.2)
 
 	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
