--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+ags (6.11.0)
+
+	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
+	* refactored AgsEnvelopeDialog inherits GtkWindow, modern button layout and close by ESC key
+	* TODO:JK: refactored tool dialogs
+
 ags (6.10.4)
 
 	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
