--- a/ChangeLog
+++ b/ChangeLog
@@ -13,17 +13,16 @@ ags (6.11.0)
 	* implemented AgsRampMarkerPopover
 	* refactored AgsEnvelopeDialog inherits GtkWindow, modern button layout and close by ESC key
 	* refactored AgsPresetDialog inherits GtkWindow, modern button layout and close by ESC key
-	* TODO:JK: removed AgsMoveNoteDialog
-	* TODO:JK: removed AgsCropNoteDialog
-	* TODO:JK: removed AgsSelectNoteDialog
-	* TODO:JK: removed AgsPositionNotationCursorDialog
-	* TODO:JK: removed AgsSelectAccelerationDialog
-	* TODO:JK: removed AgsRampAccelerationDialog
-	* TODO:JK: removed AgsPositionAutomationCursorDialog
-	* TODO:JK: removed AgsSelectBufferDialog
-	* TODO:JK: removed AgsPositionWaveCursorDialog
-	* TODO:JK: removed AgsRampMarkerDialog
-	* TODO:JK: refactored tool dialogs
+	* removed AgsMoveNoteDialog
+	* removed AgsCropNoteDialog
+	* removed AgsSelectNoteDialog
+	* removed AgsPositionNotationCursorDialog
+	* removed AgsSelectAccelerationDialog
+	* removed AgsRampAccelerationDialog
+	* removed AgsPositionAutomationCursorDialog
+	* removed AgsSelectBufferDialog
+	* removed AgsPositionWaveCursorDialog
+	* removed AgsRampMarkerDialog
 
 ags (6.10.4)
 
