--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+ags (6.11.3)
+
+	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
+	* fixed config values
+	* fixed present windows
+	* updated user manual for macOS
+
 ags (6.11.2)
 
 	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
