improved AgsMachine context dialogs

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+ags (6.11.5)
+
+	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
+	* improved AgsMachine context dialogs
+
 ags (6.11.4)
 
 	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
