--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+ags (6.11.6)
+
+	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
+	* added initial missing app window in window menu
+	* added missing preferences in window menu
+
 ags (6.11.5)
 
 	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
