--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+ags (6.12.1)
+
+	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
+	* minor improvements
+
 ags (6.12.0)
 
 	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
