improved open file

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+ags (6.12.2)
+
+	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
+	* improved file open
+
 ags (6.12.1)
 
 	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
