--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+ags (6.12.4)
+
+	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
+	* work-around improved open project files on macOS
+
 ags (6.12.3)
 
 	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
