--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+ags (6.12.5)
+
+	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
+	* fixed potential SIGSEGV while open files
+	* fixed memory-leak in ags_simple_file.c
+
 ags (6.12.4)
 
 	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
