--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+ags (6.13.1)
+
+	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
+	* improved missing vibrant dark mode
+
 ags (6.13.0)
 
 	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
