--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+ags (6.13.2)
+
+	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
+	* added MIDI channel selector while importing SMF files
+
 ags (6.13.1)
 
 	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
