--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+ags (6.13.3)
+
+	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
+	* fixed potential SIGSEGV while open files
+	* minor improvements in libgsequencer.so
+
 ags (6.13.2)
 
 	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
