--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+ags (6.13.4)
+
+	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
+	* fixed scrollbars of notation edit
+
 ags (6.13.3)
 
 	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
