--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+ags (6.14.0)
+
+	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
+	* improved swipe
+
 ags (6.13.5)
 
 	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
