--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+ags (6.14.3)
+
+	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
+	* fixed remove all machine selector add index after open file
+
 ags (6.14.2)
 
 	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
