--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+ags (6.14.6)
+
+	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
+	* fixed accelerated functions using large vectors
+
 ags (6.14.5)
 
 	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
