--- a/ChangeLog
+++ b/ChangeLog
@@ -1,7 +1,9 @@
 ags (6.15.0)
 
 	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
-	* TODO:JK: implemented ags_pitch_16x_alias_util.c
+	* implemented ags_pitch_16x_alias_util.c
+	* implemented ags_pitch_4x_alias_util.c
+	* implemented ags_pitch_2x_alias_util.c
 
 ags (6.14.7)
 
