--- a/ChangeLog
+++ b/ChangeLog
@@ -2,8 +2,8 @@ ags (6.15.0)
 
 	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
 	* implemented draw trace pointer of AgsNotationEdit
-	* TODO:JK: implemented pitch selection of AgsSF2Synth
-	* TODO:JK: implemented pitch selection of AgsSFZSynth
+	* implemented pitch selection of AgsSF2Synth
+	* implemented pitch selection of AgsSFZSynth
 	* implemented ags_pitch_16x_alias_util.c
 	* implemented ags_pitch_4x_alias_util.c
 	* implemented ags_pitch_2x_alias_util.c
