fixed loop and timing and fixed potential SIGSEGV while program start if filename is ommited

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+ags (6.15.3)
+
+	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
+	* fixed note 256th counter loop and timing
+	* fixed potential SIGSEGV while filename not supplied
+
 ags (6.15.2)
 
 	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
