fixed faster wave clipboard

--- a/ChangeLog
+++ b/ChangeLog
@@ -3,6 +3,8 @@ ags (6.16.0)
 	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
 	* implemented ags_wave_copy_selection_as_base64()
 	* implemented ags_wave_cut_selection_as_base64()
+	* implemented ags_wave_insert_base64_from_clipboard()
+	* implemented ags_wave_insert_base64_from_clipboard_extended()
 	* fixed composite toolbar menu tool popover parent widget to be a GtkBox
 
 ags (6.15.4)
