--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+ags (6.16.1)
+
+	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
+	* fixed low-latency counter bug
+
 ags (6.16.0)
 
 	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
