--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+ags (6.16.2)
+
+	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
+	* fixed missing confirm remove of existing files while export
+
 ags (6.16.1)
 
 	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
