implemented AgsRecallMidi1ControlChange

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+ags (7.0.0)
+
+	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
+
 ags (6.16.3)
 
 	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
