--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+ags (6.16.4)
+
+	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
+	* make compile with gcc-14
+
 ags (6.16.3)
 
 	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
