--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+ags (6.16.5)
+
+	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
+	* fixed potential SIGSEGV with AgsCompositeEditor without focused automation edit
+
 ags (6.16.4)
 
 	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
