--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+ags (6.16.6)
+
+	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
+	* fixed infinite loop in AgsCompositeEditor wave form cut
+
 ags (6.16.5)
 
 	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
