--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+ags (6.16.8)
+
+	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
+	* improved AgsSimpleFile restore
+
 ags (6.16.7)
 
 	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
