--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,7 @@
 ags (7.0.0)
 
 	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
+	* implemented ags_recall_midi1_control_change()
 
 ags (6.16.8)
 
