--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+ags (6.16.9)
+
+	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
+	* fixed AgsFileWidget macOS sandbox path
+
 ags (6.16.8)
 
 	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
