--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,9 @@
-ags (6.16.10)
+ags (6.16.11)
+
+	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
+	* fixed SIGSEGV while update synth engine during XML file restore
+
+gs (6.16.10)
 
 	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
 	* improved XML project file restore, update synth engine
