--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+ags (6.16.12)
+
+	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
+	* fixed music path in gsequencer_main.c's install_data() function for macOS
+
 ags (6.16.11)
 
 	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
