--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+ags (6.16.13)
+
+	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
+	* fixed music path for macOS
+
 ags (6.16.12)
 
 	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
