--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+ags (6.16.18)
+
+	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
+	* fixed AgsMidiParser
+
 ags (6.16.17)
 
 	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
