--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+ags (6.16.20)
+
+	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
+	* minor improvements
+
 ags (6.16.19)
 
 	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
