--- a/ChangeLog
+++ b/ChangeLog
@@ -4,8 +4,9 @@ ags (7.0.0)
 	* NOTE:JK: incompatible ags_audio_buffer_util_get_copy_mode() due to refactoring
 	* NOTE:JK: incompatible ags_midi_parser_read_varlength() due to refactoring
 	* implemented ags_recall_midi1_control_change()
+	* implemented ags_recall_midi2_control_change()
 	* refactored AgsAudioBufferUtil breaking ABI
-	* TODO:JK: refactored ags_audio_buffer_util_get_copy_mode_from_format()
+	* refactored ags_audio_buffer_util_get_copy_mode_from_format()
 
 ags (6.16.20)
 
