--- a/ChangeLog
+++ b/ChangeLog
@@ -11,70 +11,22 @@ ags (7.0.0)
 	* NOTE:JK: incompatible ags_midi_ump_util_put_midi1_pitch_bend() due to bug
 	* NOTE:JK: incompatible ags_midi_ump_util_get_midi1_pitch_bend() due to bug
 	* NOTE:JK: incompatible AgsMidiBuilder::pitch-bend() due to bug
-	* NOTE:JK: refactored ags_chorus_util_compute_s8() to be private
-	* NOTE:JK: refactored ags_chorus_util_compute_s16() to be private
-	* NOTE:JK: refactored ags_chorus_util_compute_s24() to be private
-	* NOTE:JK: refactored ags_chorus_util_compute_s32() to be private
-	* NOTE:JK: refactored ags_chorus_util_compute_s64() to be private
-	* NOTE:JK: refactored ags_chorus_util_compute_float() to be private
-	* NOTE:JK: refactored ags_chorus_util_compute_double() to be private
-	* NOTE:JK: refactored ags_chorus_util_compute_complex() to be private
-	* NOTE:JK: refactored ags_envelope_util_compute_s8() to be private
-	* NOTE:JK: refactored ags_envelope_util_compute_s16() to be private
-	* NOTE:JK: refactored ags_envelope_util_compute_s24() to be private
-	* NOTE:JK: refactored ags_envelope_util_compute_s32() to be private
-	* NOTE:JK: refactored ags_envelope_util_compute_s64() to be private
-	* NOTE:JK: refactored ags_envelope_util_compute_float() to be private
-	* NOTE:JK: refactored ags_envelope_util_compute_double() to be private
-	* NOTE:JK: refactored ags_envelope_util_compute_complex() to be private
-	* NOTE:JK: refactored ags_fast_pitch_util_pitch_s8() to be private
-	* NOTE:JK: refactored ags_fast_pitch_util_pitch_s16() to be private
-	* NOTE:JK: refactored ags_fast_pitch_util_pitch_s24() to be private
-	* NOTE:JK: refactored ags_fast_pitch_util_pitch_s32() to be private
-	* NOTE:JK: refactored ags_fast_pitch_util_pitch_s64() to be private
-	* NOTE:JK: refactored ags_fast_pitch_util_pitch_float() to be private
-	* NOTE:JK: refactored ags_fast_pitch_util_pitch_double() to be private
-	* NOTE:JK: refactored ags_fast_pitch_util_pitch_complex() to be private
-	* NOTE:JK: refactored ags_fluid_iir_filter_util_process_s8() to be private
-	* NOTE:JK: refactored ags_fluid_iir_filter_util_process_s16() to be private
-	* NOTE:JK: refactored ags_fluid_iir_filter_util_process_s24() to be private
-	* NOTE:JK: refactored ags_fluid_iir_filter_util_process_s32() to be private
-	* NOTE:JK: refactored ags_fluid_iir_filter_util_process_s64() to be private
-	* NOTE:JK: refactored ags_fluid_iir_filter_util_process_float() to be private
-	* NOTE:JK: refactored ags_fluid_iir_filter_util_process_double() to be private
-	* NOTE:JK: refactored ags_fluid_iir_filter_util_process_complex() to be private
-	* NOTE:JK: refactored ags_fluid_interpolate_4th_order_util_pitch_s8() to be private
-	* NOTE:JK: refactored ags_fluid_interpolate_4th_order_util_pitch_s16() to be private
-	* NOTE:JK: refactored ags_fluid_interpolate_4th_order_util_pitch_s24() to be private
-	* NOTE:JK: refactored ags_fluid_interpolate_4th_order_util_pitch_s32() to be private
-	* NOTE:JK: refactored ags_fluid_interpolate_4th_order_util_pitch_s64() to be private
-	* NOTE:JK: refactored ags_fluid_interpolate_4th_order_util_pitch_float() to be private
-	* NOTE:JK: refactored ags_fluid_interpolate_4th_order_util_pitch_double() to be private
-	* NOTE:JK: refactored ags_fluid_interpolate_4th_order_util_pitch_complex() to be private
-	* NOTE:JK: refactored ags_fluid_interpolate_7th_order_util_pitch_s8() to be private
-	* NOTE:JK: refactored ags_fluid_interpolate_7th_order_util_pitch_s16() to be private
-	* NOTE:JK: refactored ags_fluid_interpolate_7th_order_util_pitch_s24() to be private
-	* NOTE:JK: refactored ags_fluid_interpolate_7th_order_util_pitch_s32() to be private
-	* NOTE:JK: refactored ags_fluid_interpolate_7th_order_util_pitch_s64() to be private
-	* NOTE:JK: refactored ags_fluid_interpolate_7th_order_util_pitch_float() to be private
-	* NOTE:JK: refactored ags_fluid_interpolate_7th_order_util_pitch_double() to be private
-	* NOTE:JK: refactored ags_fluid_interpolate_7th_order_util_pitch_complex() to be private
-	* NOTE:JK: ags_fluid_interpolate_linear_util_pitch_s8() to be private
-	* NOTE:JK: ags_fluid_interpolate_linear_util_pitch_s16() to be private
-	* NOTE:JK: ags_fluid_interpolate_linear_util_pitch_s24() to be private
-	* NOTE:JK: ags_fluid_interpolate_linear_util_pitch_s32() to be private
-	* NOTE:JK: ags_fluid_interpolate_linear_util_pitch_s64() to be private
-	* NOTE:JK: ags_fluid_interpolate_linear_util_pitch_float() to be private
-	* NOTE:JK: ags_fluid_interpolate_linear_util_pitch_double() to be private
-	* NOTE:JK: ags_fluid_interpolate_linear_util_pitch_complex() to be private
-	* NOTE:JK: ags_fluid_interpolate_none_util_pitch_s8() to be private
-	* NOTE:JK: ags_fluid_interpolate_none_util_pitch_s16() to be private
-	* NOTE:JK: ags_fluid_interpolate_none_util_pitch_s24() to be private
-	* NOTE:JK: ags_fluid_interpolate_none_util_pitch_s32() to be private
-	* NOTE:JK: ags_fluid_interpolate_none_util_pitch_s64() to be private
-	* NOTE:JK: ags_fluid_interpolate_none_util_pitch_float() to be private
-	* NOTE:JK: ags_fluid_interpolate_none_util_pitch_double() to be private
-	* NOTE:JK: ags_fluid_interpolate_none_util_pitch_complex() to be private
+	* NOTE:JK: incompatible ags_fourier_transform_util_compute_stft_s8() due to refactoring
+	* NOTE:JK: incompatible ags_fourier_transform_util_compute_stft_s16() due to refactoring
+	* NOTE:JK: incompatible ags_fourier_transform_util_compute_stft_s24() due to refactoring
+	* NOTE:JK: incompatible ags_fourier_transform_util_compute_stft_s32() due to refactoring
+	* NOTE:JK: incompatible ags_fourier_transform_util_compute_stft_s64() due to refactoring
+	* NOTE:JK: incompatible ags_fourier_transform_util_compute_stft_float() due to refactoring
+	* NOTE:JK: incompatible ags_fourier_transform_util_compute_stft_double() due to refactoring
+	* NOTE:JK: incompatible ags_fourier_transform_util_compute_stft_complex() due to refactoring
+	* NOTE:JK: incompatible ags_fourier_transform_util_inverse_stft_s8() due to refactoring
+	* NOTE:JK: incompatible ags_fourier_transform_util_inverse_stft_s16() due to refactoring
+	* NOTE:JK: incompatible ags_fourier_transform_util_inverse_stft_s24() due to refactoring
+	* NOTE:JK: incompatible ags_fourier_transform_util_inverse_stft_s32() due to refactoring
+	* NOTE:JK: incompatible ags_fourier_transform_util_inverse_stft_s64() due to refactoring
+	* NOTE:JK: incompatible ags_fourier_transform_util_inverse_stft_float() due to refactoring
+	* NOTE:JK: incompatible ags_fourier_transform_util_inverse_stft_double() due to refactoring
+	* NOTE:JK: incompatible ags_fourier_transform_util_inverse_stft_complex() due to refactoring
 	* NOTE:JK: removed ags_envelope_util_get_wah_wah_enabled()
 	* NOTE:JK: removed ags_envelope_util_set_wah_wah_enabled()
 	* NOTE:JK: removed ags_envelope_util_get_wah_wah_lfo_depth()
@@ -85,10 +37,13 @@ ags (7.0.0)
 	* NOTE:JK: removed ags_envelope_util_set_wah_wah_tuning()
 	* NOTE:JK: removed ags_envelope_util_get_wah_wah_lfo_offset()
 	* NOTE:JK: removed ags_envelope_util_set_wah_wah_lfo_offset()
-	* TODO:JK: implemented utility functions initializers
 	* implemented ags_recall_midi1_control_change()
 	* implemented ags_recall_midi2_control_change()
+	* TODO:JK: implemented utility functions initializers
 	* TODO:JK: refactored envelope to support LFO
+	* TODO:JK: refactored ags/audio/ags_fourier_transform_util.h
+	* TODO:JK: refactored ags/audio/ags_audio_buffer_util.h
+	* TODO:JK: temporary private utility functions
 	* refactored AgsAudioBufferUtil breaking ABI
 	* refactored AgsSynthUtil breaking ABI
 	* refactored ags_audio_buffer_util_get_copy_mode_from_format() breaking ABI due to renaming and conflict
