--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+ags (6.16.22)
+
+	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
+	* fixed potential SIGSEGV in ags_audio.c involving g_object_run_dispose()
+
 ags (6.16.21)
 
 	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
