--- a/ChangeLog
+++ b/ChangeLog
@@ -45,7 +45,7 @@ ags (7.0.0)
 	* optimized ags/audio/ags_audio_buffer_util.c
 	* optimized ags/audio/ags_volume_util.c
 	* TODO:JK: optimized ags/audio/ags_envelope_util.c
-	* TODO:JK: refactored envelope to support LFO
+	* refactored envelope to support LFO
 	* refactored ags/audio/ags_fourier_transform_util.h
 	* refactored ags/audio/ags_audio_buffer_util.h
 	* refactored AgsAudioBufferUtil breaking ABI
