--- a/po/gsequencer.pot
+++ b/po/gsequencer.pot
@@ -18,9 +18,9 @@
 #, fuzzy
 msgid ""
 msgstr ""
-"Project-Id-Version: gsequencer 6.16.23\n"
+"Project-Id-Version: gsequencer 7.0.0-pre1\n"
 "Report-Msgid-Bugs-To: jkraehemann@gmail.com\n"
-"POT-Creation-Date: 2024-10-13 10:55+0200\n"
+"POT-Creation-Date: 2024-10-15 11:24+0200\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
