fixed ags_midi_ump_util_(get,put)_product_instance_id_notification() string length

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,9 +1,14 @@
+ags (7.0.6)
+
+	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
+	* fixed ags_midi_ump_util_(get,put)_product_instance_id_notification() string length
+
 ags (7.0.5)
 
 	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
 	* fixed AgsMidiCIUtil
 	* fixed AgsHybridFMSynth synth-*-lfo-depth XML project file persistence
-	* TODO:JK: fixed ags_midi_ci_util_test.c
+	* fixed ags_midi_ci_util_test.c
 
 ags (7.0.4)
 
