--- a/ChangeLog
+++ b/ChangeLog
@@ -2,6 +2,7 @@ ags (7.0.12)
 
 	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
 	* updated libags_vst3.so ABI breaking in libags_audio.so
+	* improved ags_simple_file_real_read_start() to be performed by timeout
 
 ags (7.0.11)
 
