--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+ags (7.1.0)
+
+	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
+	* implemented dead-lock recover signal of AgsThread
+	* extended AgsThread struct adding field is_running
+
 ags (7.0.13)
 
 	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
