--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+ags (7.1.3)
+
+	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
+	* fixed potential SIGSEGV with AgsSFZSynthGenerator
+	* fixed AgsHybridSynth and AgsHybridFMSynth q_lin upper and lower range to cents
+	* fixed removed remaining calls to g_object_run_dispose() with widgets
+
 ags (7.1.2)
 
 	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
