--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+ags (7.1.8)
+
+	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
+	* fixed removed setlocale during XML project file interaction
+	* fixed AgsPerformancePreference super threaded channel callback check button
+	* fixed AgsOscServerPreferences callbacks check button
+
 ags (7.1.7)
 
 	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
