--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+ags (7.2.0)
+
+	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
+	* TODO:JK: improved notation editor
+
 ags (7.1.9)
 
 	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
