--- a/ChangeLog
+++ b/ChangeLog
@@ -1,7 +1,7 @@
 ags (7.2.0)
 
 	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
-	* TODO:JK: improved notation editor
+	* improved notation, automation and wave editor selection color
 
 ags (7.1.9)
 
