--- a/ChangeLog
+++ b/ChangeLog
@@ -1,7 +1,8 @@
 ags (7.2.0)
 
 	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
-	* implemented resize notes in editor using shift key
+	* implemented resize notation in editor using shift key and mouse
+	* implemented resize automation in editor using shift key and mouse
 	* improved notation, automation and wave editor selection color
 
 ags (7.1.9)
