--- a/ChangeLog
+++ b/ChangeLog
@@ -1,8 +1,7 @@
 ags (7.3.0)
 
 	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
-	* fixed ags-fx-synth missing low and high-pass filter presets
-	* fixed ags-fx-fm-synth missing low and high-pass filter presets
+	* TODO:JK: implemented undo/redo in editor
 
 ags (7.2.5)
 
